成功从前端传后端并添加到数据库
成功从前端传后端并添加到数据库

--- a/main/db_connect.ipynb
+++ b/main/db_connect.ipynb
@@ -9,18 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据库文件的完整路径: D:\\2024秋招-大四上\\毕业论文\\Docu_Assist\\instance\\site.db\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m-----------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msqlite3\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# 连接到数据库\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m cursor \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# 创建新表（修改表结构以存储文件路径）\u001b[39;00m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: unable to open database file"
+      "数据库文件的完整路径: D:\\2024秋招-大四上\\毕业论文\\DocuAssist_flask\\instance\\site.db\n",
+      "表 'applications' 已成功创建。\n",
+      "数据库中的所有表:\n",
+      "user\n",
+      "question\n",
+      "sqlite_sequence\n",
+      "applications\n"
      ]
     }
    ],
@@ -39,7 +34,7 @@
     "app.config['UPLOAD_FOLDER'] = UPLOAD_FOLDER\n",
     "\n",
     "# 获取 instance 文件夹中 site.db 的路径\n",
-    "db_path = os.path.join(os.path.dirname(os.path.dirname(app.root_path)), 'instance', 'site.db')\n",
+    "db_path = 'D:\\\\2024秋招-大四上\\\\毕业论文\\\\DocuAssist_flask\\\\instance\\\\site.db'\n",
     "print(f\"数据库文件的完整路径: {db_path}\")\n",
     "\n",
     "import sqlite3\n",
@@ -47,6 +42,7 @@
     "# 连接到数据库\n",
     "conn = sqlite3.connect(db_path)\n",
     "cursor = conn.cursor()\n",
+    "\n",
     "# 创建新表（修改表结构以存储文件路径）\n",
     "cursor.execute('''\n",
     "CREATE TABLE IF NOT EXISTS applications (\n",
@@ -60,7 +56,9 @@
     "    visit_count INTEGER DEFAULT 0,\n",
     "    comment_count INTEGER DEFAULT 0,\n",
     "    favorite_count INTEGER DEFAULT 0,\n",
-    "    used_models TEXT\n",
+    "    used_models TEXT,\n",
+    "    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
     ")\n",
     "''')\n",
     "\n",
@@ -69,25 +67,6 @@
     "conn.close()\n",
     "\n",
     "print(\"表 'applications' 已成功创建。\")\n",
-    "\n",
-    "# 文件上传函数\n",
-    "def allowed_file(filename):\n",
-    "    ALLOWED_EXTENSIONS = {'txt', 'pdf', 'png', 'jpg', 'jpeg', 'gif', 'doc', 'docx'}\n",
-    "    return '.' in filename and filename.rsplit('.', 1)[1].lower() in ALLOWED_EXTENSIONS\n",
-    "\n",
-    "@app.route('/upload', methods=['POST'])\n",
-    "def upload_file():\n",
-    "    if 'file' not in request.files:\n",
-    "        return 'No file part', 400\n",
-    "    file = request.files['file']\n",
-    "    if file.filename == '':\n",
-    "        return 'No selected file', 400\n",
-    "    if file and allowed_file(file.filename):\n",
-    "        filename = secure_filename(file.filename)\n",
-    "        file_path = os.path.join(app.config['UPLOAD_FOLDER'], filename)\n",
-    "        file.save(file_path)\n",
-    "        return f'File uploaded successfully. Path: {file_path}', 200\n",
-    "    return 'File type not allowed', 400\n",
     "\n",
     "# 验证表是否创建成功\n",
     "conn = sqlite3.connect(db_path)\n",
