--- a/main/db_add.ipynb
+++ b/main/db_add.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据库文件的完整路径: D:\\2024秋招-大四上\\毕业论文\\DocuAssist_flask\\main\\instance\\site.db\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m-----------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m数据库文件的完整路径: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdb_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# 连接到数据库\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m cursor \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# 准备要插入的数据\u001b[39;00m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: unable to open database file"
+      "数据库文件的完整路径: D:\\2024秋招-大四上\\毕业论文\\DocuAssist_flask\\instance\\site.db\n",
+      "数据已成功添加到数据库。\n",
+      "\n",
+      "新添加的应用:\n",
+      "(1, '测试应用', 'D:\\\\2024秋招-大四上\\\\毕业论文\\\\uploads\\\\avatar.jpg', '测试创建者', None, '这是一个测试应用的描述', 'D:\\\\2024秋招-大四上\\\\毕业论文\\\\uploads\\\\document.pdf', 0, 0, 0, 'GPT-3,BERT', '2024-10-28 15:00:09', '2024-10-28 15:00:09')\n"
      ]
     }
    ],
@@ -39,7 +32,7 @@
     "app.config['UPLOAD_FOLDER'] = UPLOAD_FOLDER\n",
     "\n",
     "# 获取 instance 文件夹中 site.db 的路径\n",
-    "db_path = 'D:\\\\2024秋招-大四上\\\\毕业论文\\\\DocuAssist_flask\\\\main\\\\instance\\\\site.db'\n",
+    "db_path = 'D:\\\\2024秋招-大四上\\\\毕业论文\\\\DocuAssist_flask\\\\instance\\\\site.db'\n",
     "print(f\"数据库文件的完整路径: {db_path}\")\n",
     "\n",
     "# 连接到数据库\n",
@@ -59,9 +52,18 @@
     "\n",
     "# 插入数据\n",
     "cursor.execute('''\n",
-    "INSERT INTO applications (app_name, app_description, creator_name, app_avatar_path, doc_file_path, visit_count, comment_count, favorite_count, used_models)\n",
-    "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
-    "''', (app_name, app_description, creator_name, app_avatar_path, doc_file_path, visit_count, comment_count, favorite_count, used_models))\n",
+    "INSERT INTO applications (\n",
+    "    app_name, app_description, creator_name, \n",
+    "    app_avatar_path, doc_file_path, \n",
+    "    visit_count, comment_count, favorite_count, \n",
+    "    used_models, created_at, updated_at\n",
+    ") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP)\n",
+    "''', (\n",
+    "    app_name, app_description, creator_name,\n",
+    "    app_avatar_path, doc_file_path,\n",
+    "    visit_count, comment_count, favorite_count,\n",
+    "    used_models\n",
+    "))\n",
     "\n",
     "# 提交更改并关闭连接\n",
     "conn.commit()\n",
@@ -81,24 +83,6 @@
     "print(application)\n",
     "\n",
     "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "数据库文件的完整路径: D:\\2024秋招-大四上\\毕业论文\\Docu_Assist\\DocuAssist\\instance\\site.db\n"
-     ]
-    }
-   ],
-   "source": [
-    "db_path = os.path.join(app.root_path, 'instance', 'site.db')\n",
-    "print(f\"数据库文件的完整路径: {db_path}\")\n"
    ]
   },
   {
