--- a/main/db_connect.ipynb
+++ b/main/db_connect.ipynb
@@ -17,10 +17,10 @@
      "evalue": "unable to open database file",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m-----------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msqlite3\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# 连接到数据库\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m cursor \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# 创建新表（修改表结构以存储文件路径）\u001b[39;00m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: unable to open database file"
+      "\u001B[1;31m-----------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mOperationalError\u001B[0m                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 21\u001B[0m\n\u001B[0;32m     18\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01msqlite3\u001B[39;00m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;66;03m# 连接到数据库\u001B[39;00m\n\u001B[1;32m---> 21\u001B[0m conn \u001B[38;5;241m=\u001B[39m \u001B[43msqlite3\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mconnect\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdb_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     22\u001B[0m cursor \u001B[38;5;241m=\u001B[39m conn\u001B[38;5;241m.\u001B[39mcursor()\n\u001B[0;32m     23\u001B[0m \u001B[38;5;66;03m# 创建新表（修改表结构以存储文件路径）\u001B[39;00m\n",
+      "\u001B[1;31mOperationalError\u001B[0m: unable to open database file"
      ]
     }
    ],
