支持无限生成，并非单词
支持无限生成，并非单词

--- a/main/qingyan_api.ipynb
+++ b/main/qingyan_api.ipynb
@@ -1318,9 +1318,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'storyBackground':'在希尔达大陆的南方，有一片广袤无垠的森林——翠绿之森。这里树木葱茏，阳光透过树叶洒下斑驳的光影，空气中弥漫着泥土和树木的清香。传说中，这片森林是精灵的家园，隐藏着许多古老的秘密和魔法。然而，森林深处也隐藏着未知的危险，各种奇花异草、神秘生物潜伏其中，让人难以捉摸。\n",
+      "{'storyBackground':'在遥远的希尔达大陆，一片被神秘力量笼罩的大陆，存在着一个被星空环绕的神秘领域——星辰之海。这片海域的上空，繁星闪烁，如同点缀在夜空中的宝石。然而，在这片星空之下，隐藏着一个鲜为人知的秘密。\n",
       "\n",
-      "森林守护者，名为艾尔琳，是一位来自翠绿之森的古老精灵。她拥有着与大自然沟通的能力，能够操控树木和风的力量。艾尔琳肩负着守护森林和平的使命，她深知这片土地的秘密和美丽。有一天，艾尔琳在森林深处发现了一枚闪烁着奇异光芒的宝石，她意识到这枚宝石可能蕴含着强大的力量，于是决定踏上寻找宝石真相的冒险之旅。在这片神秘的翠绿之森，艾尔琳将面临种种考验，揭开森林深处的秘密，并守护这片美丽而神秘的家园。'}\n"
+      "传说，在星辰之海的深处，沉睡着一把拥有无尽力量的神秘之剑——星陨剑。这把剑的剑身由星辰之铁锻造，剑柄镶嵌着璀璨的宝石。拥有星陨剑的人，便能掌握星辰之力，成为星辰之海的霸主。\n",
+      "\n",
+      "星辰旅者，一位来自星际的神秘旅人，因一次偶然的机会，得到了一把神秘的指南针。指南针上刻着一行字：“追寻星辰之力，揭开星辰之海的奥秘。”为了寻找那把传说中的星陨剑，星辰旅者决定踏上星辰之海，寻找那把改变命运的神秘之剑。在这片星空之下，一场冒险即将展开，而星辰旅者，也将在这片星空的指引下，探寻着属于自己的传奇故事。'}\n"
      ]
     }
    ],
@@ -1342,19 +1344,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "{'narrator': '艾尔琳，你小心翼翼地跟随着森林中的小径，来到了一片宽阔的湖泊边。湖水清澈见底，倒映着天空的蓝和树木的绿。', 'npcName': '星辰旅者', 'dialog': '你好，艾尔琳。我在湖边看到了那颗宝石，它似乎在回应我的召唤。hello，你愿意帮我一起寻找它的下落吗？', 'scene': '湖泊', 'options': [{'text': '当然可以，星辰旅者。你的力量和智慧一定能帮助我找到宝石。', 'isCorrect': True, 'nextScene': 2}, {'text': '我不确定，这听起来太危险了。', 'isCorrect': False, 'nextScene': 3}, {'text': '我需要先调查一下湖边的环境。', 'isCorrect': False, 'nextScene': 4}]}\n",
-      "fine\n",
-      "{'narrator': '艾尔琳，你跟随星辰旅者来到了一片幽静的森林小径，四周的树木散发着淡淡的香气。', 'npcName': '星辰旅者', 'dialog': '这里的空气真好，艾尔琳。fine，我们继续前进吧，宝石的力量似乎在这里变得更加强大。', 'scene': '森林', 'options': [{'text': '是的，星辰旅者。fine，我也能感觉到它就在附近。', 'isCorrect': True, 'nextScene': 2}, {'text': '这里的树木看起来很茂密，fine，我们小心点。', 'isCorrect': False, 'nextScene': 3}, {'text': '我更喜欢沙漠的风景，fine，这里的森林太密集了。', 'isCorrect': False, 'nextScene': 4}]}\n",
-      "thanks\n",
-      "{'narrator': '艾尔琳，你和星辰旅者在一座古堡前停下脚步，这里显得庄严肃穆。', 'npcName': '星辰旅者', 'dialog': '艾尔琳，你做得很好，找到了这座古堡。谢谢你的帮助，现在我们需要找到古堡中的线索。', 'scene': '古堡', 'options': [{'text': '谢谢你的信任，星辰旅者。我会尽力寻找线索的。', 'isCorrect': True, 'nextScene': 2}, {'text': '这座古堡看起来很坚固，谢谢你的提醒。', 'isCorrect': False, 'nextScene': 3}, {'text': '我不认为古堡里会有什么线索，谢谢你的建议。', 'isCorrect': False, 'nextScene': 4}]}\n",
-      "you\n",
-      "{'narrator': '艾尔琳，你和星辰旅者站在古堡的门口，这里充满了历史的痕迹。', 'npcName': '星辰旅者', 'dialog': '你注意到古堡的墙上刻有一些古老的符号，你认为是通往宝藏的线索。你，艾尔琳，有什么想法？', 'scene': '古堡', 'options': [{'text': '我认为这些符号指向的是古堡的地下密室，我们需要下去探索。', 'isCorrect': True, 'nextScene': 2}, {'text': '这些符号可能只是装饰，你不必太在意。', 'isCorrect': False, 'nextScene': 3}, {'text': '我们应该先调查古堡的其他部分，而不是急于寻找地下密室。', 'isCorrect': False, 'nextScene': 4}]}\n"
+      "休眠4秒钟\n",
+      "单词revolution修改后的json:符合您的规则，以下是修改后的json对象：\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"narrator\": \"艾琳站在星辰之海边缘，她的眼中闪烁着坚定的光芒。\",\n",
+      "  \"npcName\": \"云游诗人\",\n",
+      "  \"dialog\": \"艾琳，你即将踏上的不仅是星辰之海的革命，更是整个希尔达大陆命运的转折点。\",\n",
+      "  \"scene\": \"星辰之海\",\n",
+      "  \"options\": [\n",
+      "    {\"text\": \"星辰之海的革命\", \"isCorrect\": true, \"nextScene\": 2},\n",
+      "    {\"text\": \"希尔达大陆的变革\", \"isCorrect\": false},\n",
+      "    {\"text\": \"星际旅行的突破\", \"isCorrect\": false}\n",
+      "  ]\n",
+      "}\n",
+      "```\n",
+      "休眠4秒钟\n",
+      "现在进行到单词revolution的生成\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 75\u001b[0m\n\u001b[0;32m     73\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m现在进行到单词\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m word[i] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m的生成\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 75\u001b[0m current_data \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoices\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m```json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m```\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(current_data)\n\u001b[0;32m     77\u001b[0m scenes_all\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     78\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnarrator\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;28mstr\u001b[39m(current_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnarrator\u001b[39m\u001b[38;5;124m'\u001b[39m]),\n\u001b[0;32m     79\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnpcName\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mstr\u001b[39m(current_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnpcName\u001b[39m\u001b[38;5;124m'\u001b[39m]),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     86\u001b[0m }\n\u001b[0;32m     87\u001b[0m })\n",
+      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
+      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[0;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[0;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
+      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_once(s, idx)\n\u001b[0;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
      ]
     }
    ],
    "source": [
-    "word = ['hello', 'fine', 'thanks', 'you']\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "word = ['revolution', 'trial', 'amazing', 'fantastic',]\n",
     "\n",
     "for i in range(len(word)): \n",
     "    messages_preset.append({\n",
@@ -1364,7 +1393,25 @@
     "    messages_preset.append({\n",
     "        \"role\": \"user\", \n",
     "        \"content\": f\"\"\"\n",
-    "        基于上述背景续写100字左右的对话，对话是中文，并且必须在对话要自然地嵌入{word[i]}单词,一定要记得嵌入单词，一定要记得嵌入单词，与背景故事衔接得当，禁止在对话中提示中文意思，并且说明一下使用什么场景，场景原则上与对话所在场景一致，1个正确翻译和两个错误翻译，正确翻译要符合角色设定和背景氛围，角色的话可以从之前的role_messages中选，场景可以从field_messages中选。narrator是进入这个对话前出现的旁白，会告诉你现在的环境以或提示你该做什么。选择正确选项就会跳转到下个场景，我每次提问你续写json都要在上个nextScene的基础加1。示例如下：\n",
+    "        生成规则：\n",
+    "        1. 任务：根据给定的背景，续写一段约100字的中文对话。\n",
+    "        2. 要求：\n",
+    "        a. 必须在提供的json对象的对话(dialog)字段中自然嵌入{word[i]}单词。\n",
+    "        b. 在生成对话前，检查json对象的dialog字段是否已包含{word[i]}单词。如果没有，则重新生成整个json对象。\n",
+    "        c. {word[i]}单词应与背景故事紧密结合。\n",
+    "        d. 对话中不得提示{word[i]}的中文意思。\n",
+    "        3. json对象结构：\n",
+    "        a. scene：描述对话发生的场景，应与对话内容中的场景一致。\n",
+    "        b. dialog：包含对话内容，需嵌入{word[i]}单词。\n",
+    "        c. npcName：对话中的非玩家角色名称，每三个场景更换一次。\n",
+    "        d. role_messages：提供可选的角色台词，可根据角色设定和背景氛围选择使用。\n",
+    "        e. field_messages：提供可选的场景描述，可根据对话场景选择使用。\n",
+    "        f. nextScene：指示下一个场景的编号，每次续写对话时需在上一个nextScene的基础上加1。\n",
+    "        g. options：包含三个选项，其中一个是正确翻译{word[i]}的选项，其余两个为错误翻译。正确选项位置随机。\n",
+    "        4. narrator：旁白，用于描述当前环境或提示操作。\n",
+    "        5. 主角：始终为“我”，不更换。\n",
+    "        6. 操作：选择正确选项后，对话将跳转至下一个场景。\n",
+    "        示例如下：\n",
     "        {{\n",
     "        \"narrator\":\"你叫艾尔达，为了探索森林的秘密，你来到了一个古老且神秘的森林\",\n",
     "        \"npcName\":\"森林守护者\",\n",
@@ -1383,7 +1430,31 @@
     "        model=\"glm-4-flash\",  \n",
     "        messages=messages_preset\n",
     "    )\n",
-    "    print(word[i])\n",
+    "    print('休眠4秒钟')\n",
+    "    time.sleep(4)\n",
+    "    ## 检查\n",
+    "    messages_preset.append({\n",
+    "        \"role\": \"assistant\", \n",
+    "        \"content\": response.choices[0].message.content\n",
+    "    })\n",
+    "    messages_preset.append({\n",
+    "        \"role\": \"user\", \n",
+    "        \"content\": f\"\"\"\n",
+    "        你检查下符合我的规则吗?\n",
+    "        在对话(dialog)字段中自然嵌入{word[i]}单词。\n",
+    "        正确选项位置随机。\n",
+    "        如果符合，只返回json，如果不符合，返回修改后的json\n",
+    "        注意：无论是否符合，都只返回json，不要回复其他内容。\n",
+    "        \"\"\"\n",
+    "    })\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"glm-4-flash\",  \n",
+    "        messages=messages_preset\n",
+    "    )\n",
+    "    print('单词' + word[i] + '修改后的json:' + response.choices[0].message.content)\n",
+    "    print('休眠4秒钟')\n",
+    "    time.sleep(4)\n",
+    "    print('现在进行到单词' + word[i] + '的生成')\n",
     "    current_data = json.loads(response.choices[0].message.content.replace(\"```json\", \"\").replace(\"```\", \"\").strip())\n",
     "    print(current_data)\n",
     "    scenes_all.append({\n",
@@ -1393,22 +1464,22 @@
     "    \"npcAvatar\": str(get_avatar_by_name(current_data['npcName'])),\n",
     "    \"backgroundVideo\": \"/videos/2077.mp4\",\n",
     "    \"vocabulary\": {\n",
-    "      \"word\": word[i],\n",
-    "      \"options\": current_data['options']\n",
+    "        \"word\": word[i],\n",
+    "        \"options\": current_data['options']\n",
     "    }\n",
-    "  })\n"
+    "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'narrator': '艾尔琳，你小心翼翼地跟随着森林中的小径，来到了一片宽阔的湖泊边。湖水清澈见底，倒映着天空的蓝和树木的绿。', 'npcName': '星辰旅者', 'npcDialog': '你好，艾尔琳。我在湖边看到了那颗宝石，它似乎在回应我的召唤。hello，你愿意帮我一起寻找它的下落吗？', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'hello', 'options': [{'text': '当然可以，星辰旅者。你的力量和智慧一定能帮助我找到宝石。', 'isCorrect': True, 'nextScene': 2}, {'text': '我不确定，这听起来太危险了。', 'isCorrect': False, 'nextScene': 3}, {'text': '我需要先调查一下湖边的环境。', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '艾尔琳，你跟随星辰旅者来到了一片幽静的森林小径，四周的树木散发着淡淡的香气。', 'npcName': '星辰旅者', 'npcDialog': '这里的空气真好，艾尔琳。fine，我们继续前进吧，宝石的力量似乎在这里变得更加强大。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'fine', 'options': [{'text': '是的，星辰旅者。fine，我也能感觉到它就在附近。', 'isCorrect': True, 'nextScene': 2}, {'text': '这里的树木看起来很茂密，fine，我们小心点。', 'isCorrect': False, 'nextScene': 3}, {'text': '我更喜欢沙漠的风景，fine，这里的森林太密集了。', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '艾尔琳，你和星辰旅者在一座古堡前停下脚步，这里显得庄严肃穆。', 'npcName': '星辰旅者', 'npcDialog': '艾尔琳，你做得很好，找到了这座古堡。谢谢你的帮助，现在我们需要找到古堡中的线索。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'thanks', 'options': [{'text': '谢谢你的信任，星辰旅者。我会尽力寻找线索的。', 'isCorrect': True, 'nextScene': 2}, {'text': '这座古堡看起来很坚固，谢谢你的提醒。', 'isCorrect': False, 'nextScene': 3}, {'text': '我不认为古堡里会有什么线索，谢谢你的建议。', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '艾尔琳，你和星辰旅者站在古堡的门口，这里充满了历史的痕迹。', 'npcName': '星辰旅者', 'npcDialog': '你注意到古堡的墙上刻有一些古老的符号，你认为是通往宝藏的线索。你，艾尔琳，有什么想法？', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'you', 'options': [{'text': '我认为这些符号指向的是古堡的地下密室，我们需要下去探索。', 'isCorrect': True, 'nextScene': 2}, {'text': '这些符号可能只是装饰，你不必太在意。', 'isCorrect': False, 'nextScene': 3}, {'text': '我们应该先调查古堡的其他部分，而不是急于寻找地下密室。', 'isCorrect': False, 'nextScene': 4}]}}]\n"
+      "[{'narrator': '你站在幽林深处的一座古老神殿前，感受到一股强大的力量波动。', 'npcName': '智慧老人', 'npcDialog': '星辰旅者，你为何来到这片幽林？这里隐藏着一个伟大的{word[1]}，只有勇敢者才能揭开它的秘密。', 'npcAvatar': '/avatars/WiseOldMan.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'revolution', 'options': [{'text': '革命', 'isCorrect': True, 'nextScene': 2}, {'text': '变革', 'isCorrect': False}, {'text': '转型', 'isCorrect': False}]}}, {'narrator': '夜幕降临，幽林深处，古老神殿前的迷雾中，我感受到一股神秘的力量。', 'npcName': '智慧老人', 'npcDialog': '星辰旅者，你感觉到了吗？这股力量正在引导我们去完成一场{word[0]}，只有通过它，我们才能找到时间之石碎片。', 'npcAvatar': '/avatars/WiseOldMan.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'trial', 'options': [{'text': '冒险', 'isCorrect': True, 'nextScene': 2}, {'text': '挑战', 'isCorrect': False}, {'text': '考验', 'isCorrect': False}]}}, {'narrator': '我站在幽林深处的一座古老神殿前，月光透过树叶的缝隙洒在神秘的神像上。', 'npcName': '星辰旅者', 'npcDialog': '这神殿的宁静和庄严真是让人叹为观止，它的历史和秘密一定非常{word[0]}。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'amazing', 'options': [{'text': '奇妙', 'isCorrect': True, 'nextScene': 2}, {'text': '平凡', 'isCorrect': False}, {'text': '普通', 'isCorrect': False}]}}, {'narrator': '我站在幽林深处的一座古老神殿前，月光透过树叶的缝隙洒在神秘的神像上。', 'npcName': '星辰旅者', 'npcDialog': '这神殿的宁静和庄严真是让人叹为观止，它的历史和秘密一定非常{word[0]}。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'fantastic', 'options': [{'text': '奇妙', 'isCorrect': True, 'nextScene': 2}, {'text': '平凡', 'isCorrect': False}, {'text': '普通', 'isCorrect': False}]}}]\n"
      ]
     }
    ],
