--- a/main/qingyan_api.ipynb
+++ b/main/qingyan_api.ipynb
@@ -1318,11 +1318,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'storyBackground':'在遥远的希尔达大陆，一片被神秘力量笼罩的大陆，存在着一个被星空环绕的神秘领域——星辰之海。这片海域的上空，繁星闪烁，如同点缀在夜空中的宝石。然而，在这片星空之下，隐藏着一个鲜为人知的秘密。\n",
+      "{'storyBackground':'在遥远的希尔达大陆，有一片被神秘力量笼罩的土地——梦境森林。这里树木葱郁，绿意盎然，阳光透过树叶洒下斑驳的光影。梦境森林中，时间仿佛失去了原有的规律，动植物们拥有着超乎寻常的能力，而森林深处更是隐藏着无数未知的秘密。\n",
       "\n",
-      "传说，在星辰之海的深处，沉睡着一把拥有无尽力量的神秘之剑——星陨剑。这把剑的剑身由星辰之铁锻造，剑柄镶嵌着璀璨的宝石。拥有星陨剑的人，便能掌握星辰之力，成为星辰之海的霸主。\n",
+      "在这片梦境森林中，流传着一个古老的传说：在森林的中央，有一座名为“时光之殿”的神殿，里面藏有一块传说中的时间之石。这块石头拥有着强大的力量，能够掌控时间，是所有梦想的源泉。\n",
       "\n",
-      "星辰旅者，一位来自星际的神秘旅人，因一次偶然的机会，得到了一把神秘的指南针。指南针上刻着一行字：“追寻星辰之力，揭开星辰之海的奥秘。”为了寻找那把传说中的星陨剑，星辰旅者决定踏上星辰之海，寻找那把改变命运的神秘之剑。在这片星空之下，一场冒险即将展开，而星辰旅者，也将在这片星空的指引下，探寻着属于自己的传奇故事。'}\n"
+      "然而，时光之殿被强大的魔法封印，只有拥有纯净心灵和坚定信念的人才能唤醒它。为了寻找时间之石，揭开封印的秘密，一群勇敢的冒险者踏上了这片充满神秘与危险的土地。在这群冒险者中，有一位来自遥远星球的星辰旅者，他拥有操控星辰之力的能力，是唤醒时光之殿的关键人物。而他的冒险之旅，也将揭开梦境森林的神秘面纱。'}\n"
      ]
     }
    ],
@@ -1345,37 +1345,65 @@
      "output_type": "stream",
      "text": [
       "休眠4秒钟\n",
-      "单词revolution修改后的json:符合您的规则，以下是修改后的json对象：\n",
-      "\n",
-      "```json\n",
-      "{\n",
-      "  \"narrator\": \"艾琳站在星辰之海边缘，她的眼中闪烁着坚定的光芒。\",\n",
-      "  \"npcName\": \"云游诗人\",\n",
-      "  \"dialog\": \"艾琳，你即将踏上的不仅是星辰之海的革命，更是整个希尔达大陆命运的转折点。\",\n",
-      "  \"scene\": \"星辰之海\",\n",
-      "  \"options\": [\n",
-      "    {\"text\": \"星辰之海的革命\", \"isCorrect\": true, \"nextScene\": 2},\n",
-      "    {\"text\": \"希尔达大陆的变革\", \"isCorrect\": false},\n",
-      "    {\"text\": \"星际旅行的突破\", \"isCorrect\": false}\n",
+      "单词revolution修改后的json:{\n",
+      "  \"narrator\":\"你与星辰旅者一同来到了梦境森林的中心，眼前是一座古老的神殿，周围环绕着奇异的植物和闪烁的幽光。\",\n",
+      "  \"npcName\":\"梦境行者\",\n",
+      "  \"dialog\":\"这里就是传说中的时光之殿，它的革命（Revolution）已经沉睡千年。我们必须找到正确的时机，唤醒它。\",\n",
+      "  \"scene\":\"时光之殿\",\n",
+      "  \"options\":[\n",
+      "    {\"text\":\"变革\",\"isCorrect\":true,\"nextScene\":2},\n",
+      "    {\"text\":\"翻转\",\"isCorrect\":false,\"nextScene\":3},\n",
+      "    {\"text\":\"唤醒\",\"isCorrect\":false,\"nextScene\":4}\n",
       "  ]\n",
       "}\n",
-      "```\n",
       "休眠4秒钟\n",
-      "现在进行到单词revolution的生成\n"
-     ]
-    },
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 75\u001b[0m\n\u001b[0;32m     73\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m现在进行到单词\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m word[i] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m的生成\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 75\u001b[0m current_data \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoices\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m```json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m```\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(current_data)\n\u001b[0;32m     77\u001b[0m scenes_all\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     78\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnarrator\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;28mstr\u001b[39m(current_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnarrator\u001b[39m\u001b[38;5;124m'\u001b[39m]),\n\u001b[0;32m     79\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnpcName\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mstr\u001b[39m(current_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnpcName\u001b[39m\u001b[38;5;124m'\u001b[39m]),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     86\u001b[0m }\n\u001b[0;32m     87\u001b[0m })\n",
-      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
-      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[0;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[0;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
-      "File \u001b[1;32md:\\2024秋招-大四上\\conda_env\\lib\\json\\decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_once(s, idx)\n\u001b[0;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
-      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+      "现在进行到单词revolution的生成\n",
+      "{'narrator': '你与星辰旅者一同来到了梦境森林的中心，眼前是一座古老的神殿，周围环绕着奇异的植物和闪烁的幽光。', 'npcName': '梦境行者', 'dialog': '这里就是传说中的时光之殿，它的革命（Revolution）已经沉睡千年。我们必须找到正确的时机，唤醒它。', 'scene': '时光之殿', 'options': [{'text': '变革', 'isCorrect': True, 'nextScene': 2}, {'text': '翻转', 'isCorrect': False, 'nextScene': 3}, {'text': '唤醒', 'isCorrect': False, 'nextScene': 4}]}\n",
+      "休眠4秒钟\n",
+      "单词trial修改后的json:{\n",
+      "  \"narrator\":\"在梦境森林的最深处，我们遇到了一道神秘的迷宫，它的每一道门都似乎在预示着即将到来的考验。\",\n",
+      "  \"npcName\":\"智慧老人\",\n",
+      "  \"dialog\":\"孩子，你准备好迎接这场trial了吗？它将测试你的勇气和智慧。\",\n",
+      "  \"scene\":\"迷宫\",\n",
+      "  \"options\":[\n",
+      "    {\"text\":\"试炼\",\"isCorrect\":true,\"nextScene\":2},\n",
+      "    {\"text\":\"冒险\",\"isCorrect\":false,\"nextScene\":3},\n",
+      "    {\"text\":\"旅程\",\"isCorrect\":false,\"nextScene\":4}\n",
+      "  ]\n",
+      "}\n",
+      "休眠4秒钟\n",
+      "现在进行到单词trial的生成\n",
+      "{'narrator': '在梦境森林的最深处，我们遇到了一道神秘的迷宫，它的每一道门都似乎在预示着即将到来的考验。', 'npcName': '智慧老人', 'dialog': '孩子，你准备好迎接这场trial了吗？它将测试你的勇气和智慧。', 'scene': '迷宫', 'options': [{'text': '试炼', 'isCorrect': True, 'nextScene': 2}, {'text': '冒险', 'isCorrect': False, 'nextScene': 3}, {'text': '旅程', 'isCorrect': False, 'nextScene': 4}]}\n",
+      "休眠4秒钟\n",
+      "单词amazing修改后的json:{\n",
+      "  \"narrator\":\"我们站在时光之殿的门前，眼前是一片闪烁着微光的魔法阵。星辰旅者轻声说道：\",\n",
+      "  \"npcName\":\"星辰旅者\",\n",
+      "  \"dialog\":\"这魔法阵，真是amazing，它连接着时间的裂缝，我们得小心操作。\",\n",
+      "  \"scene\":\"时光之殿\",\n",
+      "  \"options\":[\n",
+      "    {\"text\":\"令人惊叹的\",\"isCorrect\":true,\"nextScene\":2},\n",
+      "    {\"text\":\"复杂的\",\"isCorrect\":false,\"nextScene\":3},\n",
+      "    {\"text\":\"神秘的\",\"isCorrect\":false,\"nextScene\":4}\n",
+      "  ]\n",
+      "}\n",
+      "休眠4秒钟\n",
+      "现在进行到单词amazing的生成\n",
+      "{'narrator': '我们站在时光之殿的门前，眼前是一片闪烁着微光的魔法阵。星辰旅者轻声说道：', 'npcName': '星辰旅者', 'dialog': '这魔法阵，真是amazing，它连接着时间的裂缝，我们得小心操作。', 'scene': '时光之殿', 'options': [{'text': '令人惊叹的', 'isCorrect': True, 'nextScene': 2}, {'text': '复杂的', 'isCorrect': False, 'nextScene': 3}, {'text': '神秘的', 'isCorrect': False, 'nextScene': 4}]}\n",
+      "休眠4秒钟\n",
+      "单词fantastic修改后的json:{\n",
+      "  \"narrator\":\"在梦境森林的中心，我们发现了那座传说中的时光之殿，它显得如此fantastic，仿佛是时间的守护者。\",\n",
+      "  \"npcName\":\"水晶精灵\",\n",
+      "  \"dialog\":\"这里的气息真是fantastic，仿佛每一块石头都在诉说着古老的秘密。\",\n",
+      "  \"scene\":\"时光之殿\",\n",
+      "  \"options\":[\n",
+      "    {\"text\":\"神奇的\",\"isCorrect\":true,\"nextScene\":2},\n",
+      "    {\"text\":\"美丽的\",\"isCorrect\":false,\"nextScene\":3},\n",
+      "    {\"text\":\"古老的\",\"isCorrect\":false,\"nextScene\":4}\n",
+      "  ]\n",
+      "}\n",
+      "休眠4秒钟\n",
+      "现在进行到单词fantastic的生成\n",
+      "{'narrator': '在梦境森林的中心，我们发现了那座传说中的时光之殿，它显得如此fantastic，仿佛是时间的守护者。', 'npcName': '水晶精灵', 'dialog': '这里的气息真是fantastic，仿佛每一块石头都在诉说着古老的秘密。', 'scene': '时光之殿', 'options': [{'text': '神奇的', 'isCorrect': True, 'nextScene': 2}, {'text': '美丽的', 'isCorrect': False, 'nextScene': 3}, {'text': '古老的', 'isCorrect': False, 'nextScene': 4}]}\n"
      ]
     }
    ],
@@ -1394,20 +1422,17 @@
     "        \"role\": \"user\", \n",
     "        \"content\": f\"\"\"\n",
     "        生成规则：\n",
-    "        1. 任务：根据给定的背景，续写一段约100字的中文对话。\n",
+    "        1. 任务：根据给定的背景，续写一段约100字的中文对话，。\n",
     "        2. 要求：\n",
-    "        a. 必须在提供的json对象的对话(dialog)字段中自然嵌入{word[i]}单词。\n",
-    "        b. 在生成对话前，检查json对象的dialog字段是否已包含{word[i]}单词。如果没有，则重新生成整个json对象。\n",
-    "        c. {word[i]}单词应与背景故事紧密结合。\n",
-    "        d. 对话中不得提示{word[i]}的中文意思。\n",
+    "        a. 必须在提供的json对象的对话(dialog)字段中使用{word[i]}单词。\n",
+    "        b. dialog字段的{word[i]}单词应与背景故事紧密结合。\n",
+    "        d. dialog对话中不得提示{word[i]}的中文意思。\n",
     "        3. json对象结构：\n",
-    "        a. scene：描述对话发生的场景，应与对话内容中的场景一致。\n",
+    "        a. scene：描述对话发生的场景，应与对话内容中的场景一致，场景选自field_message。\n",
     "        b. dialog：包含对话内容，需嵌入{word[i]}单词。\n",
-    "        c. npcName：对话中的非玩家角色名称，每三个场景更换一次。\n",
-    "        d. role_messages：提供可选的角色台词，可根据角色设定和背景氛围选择使用。\n",
-    "        e. field_messages：提供可选的场景描述，可根据对话场景选择使用。\n",
-    "        f. nextScene：指示下一个场景的编号，每次续写对话时需在上一个nextScene的基础上加1。\n",
-    "        g. options：包含三个选项，其中一个是正确翻译{word[i]}的选项，其余两个为错误翻译。正确选项位置随机。\n",
+    "        c. npcName：对话中的非玩家角色名称，每三个场景更换一次，npcName选自role_message。\n",
+    "        d. nextScene：指示下一个场景的编号，每次续写对话时需在上一个nextScene的基础上加1。\n",
+    "        e. options：包含三个选项，其中一个是正确翻译{word[i]}的选项，其余两个为错误翻译。正确选项位置随机。\n",
     "        4. narrator：旁白，用于描述当前环境或提示操作。\n",
     "        5. 主角：始终为“我”，不更换。\n",
     "        6. 操作：选择正确选项后，对话将跳转至下一个场景。\n",
@@ -1440,11 +1465,10 @@
     "    messages_preset.append({\n",
     "        \"role\": \"user\", \n",
     "        \"content\": f\"\"\"\n",
-    "        你检查下符合我的规则吗?\n",
-    "        在对话(dialog)字段中自然嵌入{word[i]}单词。\n",
-    "        正确选项位置随机。\n",
-    "        如果符合，只返回json，如果不符合，返回修改后的json\n",
-    "        注意：无论是否符合，都只返回json，不要回复其他内容。\n",
+    "        json的dialog字段中没有单词：{word[i]}；加入这个单词并返回json给我，不要回复其他多余内容\n",
+    "        正确选项位置为什么没有随机，为什么都在第一个；\n",
+    "        选项options不是剧情，而是{word[i]}的正确意思以及两个错误意思；\n",
+    "        现在返回修改后的json给我，不要回复其他内容；\n",
     "        \"\"\"\n",
     "    })\n",
     "    response = client.chat.completions.create(\n",
@@ -1472,14 +1496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'narrator': '你站在幽林深处的一座古老神殿前，感受到一股强大的力量波动。', 'npcName': '智慧老人', 'npcDialog': '星辰旅者，你为何来到这片幽林？这里隐藏着一个伟大的{word[1]}，只有勇敢者才能揭开它的秘密。', 'npcAvatar': '/avatars/WiseOldMan.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'revolution', 'options': [{'text': '革命', 'isCorrect': True, 'nextScene': 2}, {'text': '变革', 'isCorrect': False}, {'text': '转型', 'isCorrect': False}]}}, {'narrator': '夜幕降临，幽林深处，古老神殿前的迷雾中，我感受到一股神秘的力量。', 'npcName': '智慧老人', 'npcDialog': '星辰旅者，你感觉到了吗？这股力量正在引导我们去完成一场{word[0]}，只有通过它，我们才能找到时间之石碎片。', 'npcAvatar': '/avatars/WiseOldMan.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'trial', 'options': [{'text': '冒险', 'isCorrect': True, 'nextScene': 2}, {'text': '挑战', 'isCorrect': False}, {'text': '考验', 'isCorrect': False}]}}, {'narrator': '我站在幽林深处的一座古老神殿前，月光透过树叶的缝隙洒在神秘的神像上。', 'npcName': '星辰旅者', 'npcDialog': '这神殿的宁静和庄严真是让人叹为观止，它的历史和秘密一定非常{word[0]}。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'amazing', 'options': [{'text': '奇妙', 'isCorrect': True, 'nextScene': 2}, {'text': '平凡', 'isCorrect': False}, {'text': '普通', 'isCorrect': False}]}}, {'narrator': '我站在幽林深处的一座古老神殿前，月光透过树叶的缝隙洒在神秘的神像上。', 'npcName': '星辰旅者', 'npcDialog': '这神殿的宁静和庄严真是让人叹为观止，它的历史和秘密一定非常{word[0]}。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'fantastic', 'options': [{'text': '奇妙', 'isCorrect': True, 'nextScene': 2}, {'text': '平凡', 'isCorrect': False}, {'text': '普通', 'isCorrect': False}]}}]\n"
+      "[{'narrator': '你与星辰旅者一同来到了梦境森林的中心，眼前是一座古老的神殿，周围环绕着奇异的植物和闪烁的幽光。', 'npcName': '梦境行者', 'npcDialog': '这里就是传说中的时光之殿，它的革命（Revolution）已经沉睡千年。我们必须找到正确的时机，唤醒它。', 'npcAvatar': '/avatars/DreamWalker.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'revolution', 'options': [{'text': '变革', 'isCorrect': True, 'nextScene': 2}, {'text': '翻转', 'isCorrect': False, 'nextScene': 3}, {'text': '唤醒', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '在梦境森林的最深处，我们遇到了一道神秘的迷宫，它的每一道门都似乎在预示着即将到来的考验。', 'npcName': '智慧老人', 'npcDialog': '孩子，你准备好迎接这场trial了吗？它将测试你的勇气和智慧。', 'npcAvatar': '/avatars/WiseOldMan.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'trial', 'options': [{'text': '试炼', 'isCorrect': True, 'nextScene': 2}, {'text': '冒险', 'isCorrect': False, 'nextScene': 3}, {'text': '旅程', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '我们站在时光之殿的门前，眼前是一片闪烁着微光的魔法阵。星辰旅者轻声说道：', 'npcName': '星辰旅者', 'npcDialog': '这魔法阵，真是amazing，它连接着时间的裂缝，我们得小心操作。', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'amazing', 'options': [{'text': '令人惊叹的', 'isCorrect': True, 'nextScene': 2}, {'text': '复杂的', 'isCorrect': False, 'nextScene': 3}, {'text': '神秘的', 'isCorrect': False, 'nextScene': 4}]}}, {'narrator': '在梦境森林的中心，我们发现了那座传说中的时光之殿，它显得如此fantastic，仿佛是时间的守护者。', 'npcName': '水晶精灵', 'npcDialog': '这里的气息真是fantastic，仿佛每一块石头都在诉说着古老的秘密。', 'npcAvatar': '/avatars/CrystalSprite.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'fantastic', 'options': [{'text': '神奇的', 'isCorrect': True, 'nextScene': 2}, {'text': '美丽的', 'isCorrect': False, 'nextScene': 3}, {'text': '古老的', 'isCorrect': False, 'nextScene': 4}]}}]\n"
      ]
     }
    ],
